modified html file

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Hello World!</h1>
     <p>I'm learning version control with Git Hub!</p>
+    <p>This is so awesome and I'm having a lot of fun learning!</p>
+    <p>I'm starting to fall in love with web development!</p>
 </body>
 </html>
